--- a/packages/starship/.config/starship.toml
+++ b/packages/starship/.config/starship.toml
@@ -1,7 +1,10 @@
+# Inserts a blank line between shell prompts
 add_newline = false
 
-[character]
-symbol = "🦄 "
+# Replace the "❯" symbol in the prompt with "➜"
+[character]                            # The name of the module we are configuring is "character"
+success_symbol = "[➜](bold green)"     # The "success_symbol" segment is being set to "➜" with the color "bold green"
 
-[git_branch]
-symbol = "🌱 "
+# Disable the package module, hiding it from the prompt completely
+[package]
+disabled = true
