--- a/packages/fish/fish.config
+++ b/packages/fish/fish.config
@@ -1,3 +1,8 @@
 if status --is-login
   eval "$(starship init fish)"
+  
+  # mcfly 
+  mcfly init fish | source
+  set -gx MCFLY_KEY_SCHEME vim
+  set -gx MCFLY_FUZZY true
 end
