--- a/packages/starship/.config/starship.toml
+++ b/packages/starship/.config/starship.toml
@@ -1,10 +1,31 @@
-# Inserts a blank line between shell prompts
 add_newline = false
 
-# Replace the "❯" symbol in the prompt with "➜"
-[character]                            # The name of the module we are configuring is "character"
-success_symbol = "[➜](bold green)"     # The "success_symbol" segment is being set to "➜" with the color "bold green"
+[directory]
+format = "[$path](underline #f57800)[$read_only]($read_only_style) "
+truncation_length = 3
+home_symbol = "~"
+read_only_style = "bold red"
 
-# Disable the package module, hiding it from the prompt completely
-[package]
-disabled = true
+[character]
+success_symbol = "[➜ ](bold green)"
+error_symbol = "[✗ ](bold red)"
+
+[cmd_duration]
+min_time = 100
+format = " [took](bold yellow) [$duration](bold green)"
+
+[aws]
+format = "on [$symbol$region]($style) "
+[aws.region_aliases]
+us-east-1 = "us-e1"
+us-east-2 = "us-e2"
+eu-west-1 = "eu-w1"
+eu-west-2 = "eu-w2"
+
+[git_status]
+ahead = "⇡${count}"
+diverged = "⇕⇡${ahead_count}⇣${behind_count}"
+behind = "⇣${count}"
+
+[directory.substitutions]
+"a/github/tetra" = "tetra"
