--- a/stowage/tmux/.tmux.conf
+++ b/stowage/tmux/.tmux.conf
@@ -8,3 +8,7 @@ unbind-key h
 bind-key h select-pane -L
 unbind-key l
 bind-key l select-pane -R
+
+# Fig Tmux Integration: Enabled
+source-file ~/.fig/tmux
+# End of Fig Tmux Integration
